# pong

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/pong/: __init__.py  ai.py  ball.py  constants.py  game.py  main.py  paddle.py
tests/: __init__.py  test_ai.py  test_ball.py  test_game.py  test_paddle.py
